charts/docmost/database.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docmost-psql
  labels:
    app: docmost-psql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docmost-psql
  template:
    metadata:
      labels:
        app: docmost-psql
    spec:
      containers:
        - name: docmost-psql
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
              name: docmost-psql
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: docmost-psql-vol
      volumes:
        - name: docmost-psql-vol
          persistentVolumeClaim:
            claimName: docmost-psql

---
apiVersion: v1
kind: Service
metadata:
  name: docmost-psql
spec:
  selector:
    app: docmost-psql
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
